--- a/DotnetToolset.Patterns/DotnetToolset.Patterns.csproj
+++ b/DotnetToolset.Patterns/DotnetToolset.Patterns.csproj
@@ -26,6 +26,7 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+    <None Include=".devops\pipeline-build-dotnettoolset.patterns-ci.yml" />
   </ItemGroup>
 
 </Project>
