--- a/DotnetToolset.Patterns/DotnetToolset.Patterns.csproj
+++ b/DotnetToolset.Patterns/DotnetToolset.Patterns.csproj
@@ -29,4 +29,19 @@
     <None Include=".devops\pipeline-build-dotnettoolset.patterns-ci.yml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Resources\Literals.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Literals.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\Literals.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Literals.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
